Separação das classes e seus testes

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 /Casos de Teste/casosdeteste/nbproject/private/
 /Casos de Teste/casosdeteste/build/
 /Casos de Teste/casosdeteste/dist/
+/código/nbproject/private/
+/código/SistemaParaChickenHouse/nbproject/private/
+/código/SistemaParaChickenHouse/build/
